// Copyright 2017 Intel Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------
syntax = "proto3";

option go_package = "pb";

// The messageType passed between the smartcontract client and smartcontract engine
enum MessageType {
    DEFAULT = 0;
    SMART_CONTRACT_VALIDATE_REQUEST = 1000;
    SMART_CONTRACT_VALIDATE_RESPONSE = 1001;
}

message SmartContractValidationRequest {
  bytes Payload = 1;
  string SmartContractAddress = 2;
}

message SmartContractValidationResponse {
  enum Status {
    STATUS_UNSET = 0;
    OK = 1;
    INVALID_TRANSACTION = 2;
    INTERNAL_ERROR = 3;
  }

  Status status = 1;
  string SignatureScheme = 2;
  int32  N = 3;
  int32  T = 4;
}